# metaImpro

./: .gitignore  README.md  accompaniement.py  accompaniment.py  app.py  bacasable.py  create_symbols.py  dpg_impro.py  dpg_interface.py  eval.py  evaluation.py  factor_oracle.py  impro.py  impro_genie.py  improvization.py  launch.py  listening.py  main.py  markov.py  midi_controller.py  midi_processor.py  mini_model.py  model.py  pyproject.toml  requirements.txt  training.py
.gradio/flagged/: dataset1.csv  dataset2.csv
corpus/: Prélude n°1 Do Majeur - J.S. Bach.mid  Sing, Sang, Sung – Clarinet Solo by Eddie Daniels.mid  Solo Transcription_ Tenor Madness - Sonny Rollins with John Coltrane.mid  Syeeda's Song Flute - John Coltrane Transcription.mid  Thirty_Caprices_No._3.mid  Thirty_Caprices_No._8.mid  do_majeur.mid  lune_1.mid  o clair de la lune.mid  output.mid  output_markov.mid
notebook/: demo.ipynb  oracle.ipynb  tokenizer.ipynb
piano_genie/: model.py  train_eval.py
